--- a/Pages/Account/Create.cshtml
+++ b/Pages/Account/Create.cshtml
@@ -8,7 +8,7 @@
     <h2 class="mb-4">Create Account</h2>
     <form method="post">
         <div class="mb-3">
-            <label for="email" class="form-label">Eat ma bawls (Optional)</label>
+            <label for="email" class="form-label">Email (Optional)</label>
             <input type="email" class="form-control" id="email" name="Credential.Email" value="@Model.Credential.Email">
             @if (Model.IsSubmitted)
             {
