--- a/Pages/Account/Login.cshtml
+++ b/Pages/Account/Login.cshtml
@@ -6,20 +6,25 @@
 
 <h2>Login</h2>
 
-<form method="post">
-    <div class="form-group">
-        <label asp-for="Credential.Username"></label>
-        <input asp-for="Credential.Username" class="form-control" />
-        <span asp-validation-for="Credential.Username" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Credential.Password"></label>
-        <input asp-for="Credential.Password" class="form-control" type="password" />
-        <span asp-validation-for="Credential.Password" class="text-danger"></span>
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-</form>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+<div class="row">
+    <div class="col-md-6">
+@if (!ModelState.IsValid)
+{
+            <div class="alert alert-danger">
+                <div asp-validation-summary="All" class="text-danger"></div>
+            </div>
 }
+
+        <form method="post">
+            <div class="form-group">
+                <label asp-for="Credential.Username"></label>
+                <input asp-for="Credential.Username" class="form-control" />
+                <span asp-validation-for="Credential.Username" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Credential.Password"></label>
+                <input asp-for="Credential.Password" class="form-control" type="password" />
+                <span asp-validation-for="Credential.Password" class="text-danger"></span>
+            </div>
+            <button type="submit" class="btn btn-primary">Login</button>
+        </form>
